--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".main.view.DetailActivity" />
+        <activity android:name=".main.view.SearchActivity" />
     </application>
 
 </manifest>
